# Projekt-Hannibal

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: sevas_conversion.yml  tests.yml
hannibal/: __init__.py
hannibal/config/: HannibalConfig.py
hannibal/io/: DBF.py  OSM.py  PolygonReader.py  YAML.py  shapefile.py
hannibal/io/OSM/: Rewriter.py
hannibal/logging/: __init__.py
hannibal/providers/: __init__.py
hannibal/providers/SEVAS/: client.py  config.py  constants.py  provider.py
hannibal/providers/SEVAS/tables/: base.py  low_emission_zones.py  preferred_roads.py  restrictions.py  road_speeds.py  traffic_signs.py
hannibal/stats/: stats.py
hannibal/util/: data.py  exception.py  executable.py  geo.py  immutable.py  version_control.py
scripts/: hannibal_sevas_utils.py  sevas_utils.py
test/: __init__.py  conftest.py  make_data.py
test/data/: extract_test_data.sh  lkw_schilder_aufstellvorrichtungen_koeln.dbf  restriktionen_koeln.dbf  restriktionen_segmente_koeln.dbf  restriktionen_segmente_koeln.shp  restriktionen_segmente_koeln.shx  test_poly.geojson  test_synth.pbf  vorrangrouten_koeln.dbf  vorrangrouten_segmente_koeln.dbf  vorrangrouten_segmente_koeln.shp  vorrangrouten_segmente_koeln.shx  zonen_polygone_koeln.dbf  zonen_polygone_koeln.shp  zonen_polygone_koeln.shx  zonen_segmente_koeln.dbf  zonen_segmente_koeln.shx
test/data/lez_test/: map.pbf  zonen_polygone.dbf  zonen_polygone.shp  zonen_polygone.shx
test/data/polygon_reader_test/: map.pbf
test/data/preferred_road_test/: map.pbf  vorrangrouten_segmente.dbf  vorrangrouten_segmente.shp
test/data/restriction_test/: map.pbf  restriktionen_segmente.dbf  restriktionen_segmente.shx
test/integration/: __init__.py
test/integration.py/SEVAS/: test_restrictions_conversion.py
test/integration/SEVAS/: __init__.py  test_restrictions_conversion.py  test_road_speeds_conversion.py
test/providers/SEVAS/: constants.py  test_low_emission_zones.py  test_preferred_roads.py  test_restrictions.py  test_road_speeds.py
test/synthesizers/: __init__.py  osm.py  sevas.py  test_synthesizers.py
test/unit/config/: test_hannibal_config.py  test_polygon_reader.py  test_tag_clean_config.py
test/unit/providers/SEVAS/: constants.py  test_client.py  test_low_emission_zones.py  test_preferred_roads.py  test_restrictions.py  test_road_speeds.py
test/util/: geo.py  osm.py
