[tool.poetry]
name = "hannibal"
version = "0.1.0"
description = "Aufbereitung von LKW-Restriktionen für die Verwendung in OSM-basiertem Routing"
authors = ["Christian Beiwinkel <christian@gis-ops.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
osmium = "^3.7.0"
dbfread = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`) codes by default and sort imports.
lint.select = ["E", "F", "I"]
lint.ignore = []
line-length = 105
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "__pycache__", ".git"]
