[project]
name = "hannibal"
version = "0.1.0"
description = "Aufbereitung von LKW-Restriktionen für die Verwendung in OSM-basiertem Routing"
authors = [{ name = "Christian Beiwinkel", email = "christian@gis-ops.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "dbfread>=2.0.7,<3",
    "pyyaml>=6.0.1,<7",
    "typer>=0.16.0,<0.17",
    "fiona>=1.9.6,<2",
    "numpy>=2.0.0,<3",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "osmium==3.7.0",
]

[project.scripts]
sevas_utils = "scripts.sevas_utils:main"
hannibal = "cli:main"

[dependency-groups]
dev = [
    "pre-commit>=3.7.1,<4",
    "ruff>=0.12.4,<0.13",
    "pytest>=8.2.2,<9",
    "geopandas>=1.0.0,<2",
    "pytest-cov>=5.0.0,<6",
]
notebook = ["ipykernel>=6.29.4,<7"]

[tool.uv]
default-groups = [
    "dev",
    "notebook",
]

[tool.hatch.build.targets.sdist]
include = [
    "hannibal",
    "scripts",
]

[tool.hatch.build.targets.wheel]
include = [
    "hannibal",
    "scripts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test"]

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`) codes by default and sort imports.
lint.select = ["E", "F", "I"]
lint.ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
lint.unfixable = []
line-length = 105

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "__pycache__", ".git"]
